# mcp-itglue

./: .gitignore  JWT_AUTH_README.md  LICENSE  README.md  SKILL.md  capture_jwt_token.py  capture_session.py  capture_session.sh  capture_token.sh  pyproject.toml  test_document_capture.py
src/mcp_itglue/: __init__.py  client.py  config.py  jwt_auth.py  jwt_client.py  server.py  session_auth.py  session_client.py
src/mcp_itglue/tools/: __init__.py  checklists.py  configurations.py  contacts.py  documents.py  domains.py  flexible_assets.py  locations.py  organizations.py  output.py  passwords.py  reference_data.py  related_items.py
