[project]
name = "mcp-itglue"
version = "0.1.0"
description = "MCP server for IT Glue API integration"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.14.2",
    "PyJWT>=2.12.0",
    "cryptography>=48.0.1",
    "python-multipart>=0.0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]
jwt = [
    "playwright>=1.40.0",
]

[project.scripts]
mcp-itglue = "mcp_itglue.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_itglue"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
